manifests/no-mesh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-experiments-with-no-mesh
