manifests/no-mesh/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-experiments-application-with-no-mesh
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-experiments-observability
  labels:
    istio-injection: enabled
