manifests/no-mesh/ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: microservices-ingress-gateway
  namespace: no-mesh
spec:
  gatewayClassName: istio
  listeners:
  - name: all-http-on-80
    hostname: completely.made.up.host.com
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
