manifests/no-mesh/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: microservices
  namespace: istio-experiments-no-mesh-application
spec:
  parentRefs:
    - name: microservices-ingress-gateway
  hostnames:
    - completely.made.up.host.com
  rules:
    - backendRefs:
        - name: microservice-a
          port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /endpoint
      matches:
        - path:
            type: Exact
            value: /a
      retry:
        attempts: 30
        backoff: 5s
        codes: [500]
      timeouts:
        request: 2s
        request: 3s
    - backendRefs:
        - name: microservice-b
          port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /endpoint
      matches:
        - path:
            type: Exact
            value: /b
      retry:
        attempts: 30
        backoff: 5s
        codes: [500]
      timeouts:
        request: 2s
        request: 3s
    - backendRefs:
        - name: microservice-c
          port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /endpoint
      matches:
        - path:
            type: Exact
            value: /c
      retry:
        attempts: 30
        backoff: 5s
        codes: [500]
      timeouts:
        request: 2s
        request: 3s
